--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,10 @@
         <!-- place navbar here -->
         <h1>Library Management System</h1>
     </header>
-    <main></main>
+    <main>
+        <a href="Login.html">Login</a>
+        <a href="Signup.html">Signup</a>
+    </main>
     <footer>
         <!-- place footer here -->
     </footer>
