--- a/frontend/booksBought.html
+++ b/frontend/booksBought.html
@@ -35,10 +35,8 @@
             var userrole = localStorage.getItem('userrole');
             if (userrole === 'Librarian') {
                 document.getElementById("borrowBtn").style.visibility = "hidden";
-                document.getElementById("booksBought").style.visibility = "hidden";
             } else {
                 document.getElementById("addBookButton").style.visibility = "hidden";
-
             }
         });
     </script>
@@ -61,7 +59,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="members.html">Members</a>
                         </li>
-                        <li class="nav-item" id="booksBought">
+                        <li class="nav-item">
                             <a class="nav-link" href="booksBought.html">Books Bought</a>
                         </li>
                     </ul>
@@ -217,7 +215,7 @@
             try {
                 console.log('Fetching books...');
 
-                const response = await fetch('https://lmsystem.vercel.app/books', {
+                const response = await fetch(`https://lmsystem.vercel.app/books/status/borrowed/${user_id}`, {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json',
@@ -260,8 +258,8 @@
                 <td>${book.status || 'N/A'}</td>
                <td>
                     <button class="btn btn-warning" onclick="openEditModal(${book.id}, '${book.title}', '${book.author}', '${book.isbn}')">Edit</button>
-                   ${localStorage.getItem('userrole') === 'Librarian' ? '' : `
-                    <button class="btn btn-warning" id="borrowBtn" onclick="borrow(${book.id}, ${user_id})">Borrow</button>
+                   ${localStorage.getItem('userrole') === 'Libraria' ? '' : `
+                    <button class="btn btn-warning" id="borrowBtn" onclick="borrow(${book.id}, ${user_id})">Return</button>
                     `}
                     <button class="btn btn-danger" onclick="confirmDelete(${book.id})">Delete</button>
                 </td>
@@ -290,7 +288,7 @@
         // Function to borrow a book
         async function borrow(id, user_id) {
             try {
-                const response = await fetch(`https://lmsystem.vercel.app/books/borrow/${id}/${user_id}`, {
+                const response = await fetch(`https://lmsystem.vercel.app/books/return/${id}/${user_id}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
