--- a/frontend/Signup.html
+++ b/frontend/Signup.html
@@ -116,7 +116,7 @@
                 });
 
                 if (response.ok) {
-                    toastBody.textContent = 'Login successful!';
+                    toastBody.textContent = 'signup successful!';
                     toast.show();
                     loginForm.reset();
                     window.location.href = 'index.html';
