--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
             <!-- Do not have account -->
-            <p class="mt-3">Don't have an account? <a href="signup.html">Sign up</a></p>
+            <p class="mt-3">Don't have an account? <a href="Signup.html">Sign up</a></p>
         </form>
     </main>
 
