--- a/frontend/members.html
+++ b/frontend/members.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="members.html">Members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Books Bought</a>
+                            <a class="nav-link" href="booksBought.html">Books Bought</a>
                         </li>
                     </ul>
                 </div>
