--- a/frontend/members.html
+++ b/frontend/members.html
@@ -373,7 +373,7 @@
                 row.innerHTML = `
                     <td>${item.book_id}</td>
                     <td>${new Date(item.taken).toLocaleDateString()}</td>
-                    <td>${item.returned ? new Date(item.return_date).toLocaleDateString() : 'Not Returned'}</td>
+                    <td>${item.returned ? new Date(item.returned).toLocaleDateString() : 'Not Returned'}</td>
                 `;
                 historyTableBody.appendChild(row);
             });
